@@ -10,6 +10,7 @@ import time
 import transaction
 import zeit.cms.celery
 import zeit.cms.checkout.interfaces
+import zeit.cms.cli
 import zeit.cms.content.interfaces
 import zeit.cms.interfaces
 import zeit.cms.repository.interfaces
@@ -232,7 +233,7 @@ def index_parallel(self, unique_id, enrich=False, publish=False):
                 log.info('Processed %s in %s', content.uniqueId, stop - start)
 
 
-@gocept.runner.once(principal=gocept.runner.from_config(
+@zeit.cms.cli.runner(principal=gocept.runner.from_config(
     'zeit.retresco', 'index-principal'))
 def reindex():
     parser = argparse.ArgumentParser(description='Reindex folder in TMS')
